--- a/fe/app/globals.css
+++ b/fe/app/globals.css
@@ -68,13 +68,40 @@
   --animate-cate: cate 500ms ease-in-out;
 
   @keyframes cate {
-
     0% {
       transform: translate(0, 20px);
     }
 
     100% {
       transform: translate(0, 0);
+    }
+  }
+
+
+  --animate-shorten: shorten 500ms ease-in-out;
+
+  @keyframes shorten {
+    0% {
+      height: 400px;
+
+    }
+
+    100% {
+      height: 100px;
+
+    }
+  }
+
+  --animate-extend: extend 2s ease-in-out;
+
+  @keyframes extend {
+    0% {
+      height: 100px;
+
+    }
+
+    100% {
+      max-height: max-content;
     }
   }
 }
